--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,14 +4,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4 # Actualizado a v4
+
       - name: Build with Buildozer
         uses: ArtemSBulgakov/buildozer-action@master
         with:
           command: buildozer android debug
           buildozer_version: master
+
       - name: Upload APK
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4 # Actualizado a v4
         with:
           name: package
           path: bin/*.apk
