--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,16 +4,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4 # Actualizado a v4
+      - uses: actions/checkout@v4
 
       - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@master
+        uses: kivy/buildozer-action@master # Este es el robot oficial
         with:
           command: buildozer android debug
           buildozer_version: master
 
       - name: Upload APK
-        uses: actions/upload-artifact@v4 # Actualizado a v4
+        uses: actions/upload-artifact@v4
         with:
           name: package
           path: bin/*.apk
