--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,10 +7,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build with Buildozer
-        uses: kivy/buildozer-action@master # Este es el robot oficial
+        uses: ArtemSBulgakov/buildozer-action@v1.6.1 # Usamos una versión fija y estable
         with:
           command: buildozer android debug
           buildozer_version: master
+          repository_root: . # Esto arregla el error de permisos anterior
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
