--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,11 +7,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1.6.1 # Usamos una versión fija y estable
+        uses: ArtemSBulgakov/buildozer-action@v1 # Cambiado a v1 (la versión estándar)
         with:
           command: buildozer android debug
           buildozer_version: master
-          repository_root: . # Esto arregla el error de permisos anterior
+          repository_root: . # Importante para evitar el error de permisos
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
