--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,19 +1,30 @@
 name: Construir APK
 on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build with Buildozer
-        uses: ArtemSBulgakov/buildozer-action@v1 # Cambiado a v1 (la versión estándar)
+      - name: Configurar Python
+        uses: actions/setup-python@v5
         with:
-          command: buildozer android debug
-          buildozer_version: master
-          repository_root: . # Importante para evitar el error de permisos
+          python-version: '3.11'
 
-      - name: Upload APK
+      - name: Instalar dependencias del sistema
+        run: |
+          sudo apt update
+          sudo apt install -y git zip unzip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
+          pip install --user --upgrade buildozer Cython==0.29.33 pillow
+
+      - name: Construir con Buildozer
+        run: |
+          export PATH=$PATH:$HOME/.local/bin
+          # Este comando acepta las licencias automáticamente
+          yes | buildozer android debug
+
+      - name: Subir APK
         uses: actions/upload-artifact@v4
         with:
           name: package
