--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,12 +7,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Configurar Python
+      - name: Limpiar caché y configurar Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: Instalar dependencias del sistema
+      - name: Instalar dependencias
         run: |
           sudo apt update
           sudo apt install -y git zip unzip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
@@ -21,7 +21,8 @@ jobs:
       - name: Construir con Buildozer
         run: |
           export PATH=$PATH:$HOME/.local/bin
-          # Este comando acepta las licencias automáticamente
+          # Limpia cualquier intento fallido anterior
+          buildozer android clean
           yes | buildozer android debug
 
       - name: Subir APK
